--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -7,3 +7,4 @@ RUN pip install -r requirements.txt
 RUN python3 init_db.py
 # command to run on container start
 CMD [ "python3", "app.py" ]
+#push test
