--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -1,11 +1,8 @@
 
 name: TechTrends - Package with Docker
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push]
+
 jobs:
   build:
     runs-on: ubuntu-latest
