--- a/project/argocd/helm-techtrends-prod.yaml
+++ b/project/argocd/helm-techtrends-prod.yaml
@@ -12,6 +12,6 @@ spec:
     helm:
       valueFiles:
       - values-prod.yaml
-    path: project/argocd/
+    path: ./project/helm
     repoURL: https://github.com/Danni9924/udacity_cloud_training
     targetRevision: HEAD
